tests/snapshots/integration__integration_tests__sync__sync_dry_run_linear_stack.snap
---
source: tests/integration_tests/sync.rs
info:
  program: wt
  args:
    - sync
    - "--dry-run"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    MOCK_CONFIG_DIR: "[MOCK_CONFIG_DIR]"
    NO_COLOR: ""
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[33m▲[39m [33mBranch [1mfeature-a[22m has equidistant parents: feature-b, feature-c. Picked [1mfeature-b[22m.[39m
[33m▲[39m [33mBranch [1mfeature-b[22m has equidistant parents: feature-a, feature-c. Picked [1mfeature-a[22m.[39m
[33m▲[39m [33mBranch [1mfeature-c[22m has equidistant parents: feature-a, feature-b. Picked [1mfeature-a[22m.[39m
Dependency tree:
main
pr1
pr2

Planned operations:
  rebase pr1 onto main
  rebase pr2 onto pr1
